polish(ui): fix images displaying too large on mobile in popup previews

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -373,6 +373,8 @@ a.queryBar-logo {
 
 .tweetImgPreview {
     display: block;
+    max-width: calc(100vw - 2em);
+    max-height: calc(100vh - 2em);
 }
 
 .tweetStats {
